--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 <body>
 
      <h1>JavaScript Homework</h1>
-
+     <h2>The program output</h2>
      <div id = "output"</div>
-
-     
 
      <script src="main.js"></script>
 </body>
